<resources>
    <string name="app_name">LEEP</string>
    <string name="startActivity_button" />
    <string name="stopActivity_button" />
    <string name="clock_txt" />

    <!-- TODO: Remove or change this placeholder text -->

    <!-- MENU !-->
    <string name="str_settings">Settings</string>
    <string name="str_statistics">Statistics</string>
    <string name="str_timeLog">Time Log</string>
    <string name="str_clockTxtMenu">00:00:00</string>
    <string name="str_account">Log Out</string>



    <!-- START PAGE !-->
    <string name="welcomeToLeep">Welcome to LEEP!</string>

    <!-- TIME LOG !-->
    <string name="emptyClock">00:00:00</string>
    <string name="startClock">START</string>
    <string name="stopClock">STOP</string>
    
    <!-- SPINNER !-->
    <string name="select_category">Select category</string>

    <!-- STATISTICS !-->
    <string name="hello_blank_fragment">Best statistics in da world</string>

    <!-- SETTINGS !-->

    <!-- REGISTER/LOGIN !-->
    <string name="email_hint">email@example.com</string>
    <string name="password_hint">Password</string>
    <string name="repeatPassword_hint">Repeat Password</string>
    <string name="Register_name">REGISTER</string>
    <string name="back_name">BACK</string>
    <string name="username_name">Username</string>

    <string name="keepLoggedIn">Keep me logged in</string>
    <string name="LogIn">LOG IN</string>

</resources>
