<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/settings_id"
        android:orderInCategory="2"
        android:title="@string/str_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/timelog_id"
        android:title="@string/str_timeLog"
        app:showAsAction="always"
        android:orderInCategory="3"
    />

    <item
        android:id="@+id/statistics_id"
        android:title="@string/str_statistics"
        app:showAsAction="always"
        android:orderInCategory="4"
    />

    <item
        android:id="@+id/account_id"
        android:title="@string/str_account"
        app:showAsAction="ifRoom"
        android:orderInCategory="5"
        />


</menu>